💄 Update space theme

--- a/google/google.html
+++ b/google/google.html
@@ -16,7 +16,7 @@
         <ul class="wrap-nav">
           <li class="lst-nav"><a href="https://mail.google.com/">Gmail</a></li>
           <li class="lst-nav"><a href="https://www.google.co.kr/imghp?hl/">Images</a></li>
-          <li class="lst-nav"><a href="#">➕</a></li>
+          <li class="lst-nav"><a href="#">+</a></li>
           <li class="lst-nav"><a href="#"><img src="./images/profile.png" alt="profile" class="img-profile"></a></li>
         </ul>
       </nav>
