--- a/google/google.html
+++ b/google/google.html
@@ -26,9 +26,12 @@
     <article class="engine-search">
       <h2 class="a11y-blind">Search form</h2>
       <form action="http://www.google.com/search" method="GET" class="form-search">
-        <label for="search"></label>
-        <input type="text" name="q" id="search" class="inp-search" placeholder="Search Google or type a URL">
-        <button type="button" class="btn-voice">🎙</button>
+        <fieldset>
+          <legend class="a11y-blind">Search form</legend>
+          <label for="search"></label>
+          <input type="search" name="q" id="search" class="inp-search" placeholder="Search Google or type a URL">
+          <button type="button" class="btn-voice">🎙</button>
+        </fieldset>
       </form>
     </article>
     <article class="shortcut">
@@ -53,6 +56,7 @@
     </article>
   </main>
   <footer>
+    <h3 class="a11y-blind">Customizing tool</h3>
     <button class="btn-custom">🖋 Customize Chrome</button>
   </footer>
 </body>
