--- a/naver/naver_home.html
+++ b/naver/naver_home.html
@@ -5,51 +5,148 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NAVER 메인페이지</title>
+  <title>NAVER</title>
 </head>
 
 <body>
   <header>
-    <h1>네이버 메인 페이지</h1>
-    <img src="#" alt="메인 로고">
-    <aside>
-      <h2>연결된 사이트</h2>
+    <h1>네이버 페이지</h1>
+    <nav>
+      <h2>퀵 메뉴</h2>
       <ul>
-        <li>네이버를 시작페지이로</li>
-        <li>쥬니어네이버</li>
-        <li>해피빈</li>
+        <li><a href="#">뉴스스탠드 바로가기</a></li>
+        <li><a href="#">주제별캐스트 바로가기</a></li>
+        <li><a href="#">타임스퀘어 바로가기</a></li>
+        <li><a href="#">쇼핑캐스트 바로가기</a></li>
+        <li><a href="#">로그인 바로가기</a></li>
+      </ul>
+    </nav>
+    <section>
+      <h2>메인 이미지</h2>
+      <img src="#" alt="이 날의 로고">
+    </section>
+    <aside>
+      <h2>페이지 이동</h2>
+      <ul>
+        <li><a href="#">네이터를 시작페이지로</a></li>
+        <li><a href="#">쥬니어네이버</a></li>
+        <li><a href="#">해피빈</a></li>
       </ul>
     </aside>
   </header>
-  <fieldset>
-    <legend>Search Engine</legend>
-    <label for="search-word"></label>
-    <input type="text" id=search-word>
-    <button type="button">검색하기</button>
-  </fieldset>
-  <main>
-    <nav>
-      <h3>카테고리 바로가기</h3>
+  <article>
+    <form>
+      <h2>네이버 검색엔진</h2>
+      <fieldset>
+        <legend>검색 카테고리</legend>
+        <label for="category"></label>
+        <select id="category">
+          <option value="통합검색" selected>통합검색</option>
+          <option value="블로그">블로그</option>
+          <option value="카페">카페</option>
+          <option value="카페명">- 카페명</option>
+          <option value="카페글">- 카페글</option>
+          <option value="지식iN">지식iN</option>
+          <option value="뉴스">뉴스</option>
+          <option value="사이트">사이트</option>
+          <option value="카테고리">- 카테고리</option>
+          <option value="사이트">- 사이트</option>
+          <option value="영화">영화</option>
+          <option value="웹문서">웹문서</option>
+          <option value="사전">사전</option>
+          <option value="백과사전">- 백과사전</option>
+          <option value="영어사전">- 영어사전</option>
+          <option value="영영사전">- 영영사전</option>
+          <option value="국어사전">- 국어사전</option>
+          <option value="일본어사전">- 일본어사전</option>
+          <option value="한자사전">- 한자사전</option>
+          <option value="용어사전">- 용어사전</option>
+          <option value="책">책</option>
+          <option value="음악">음악</option>
+          <option value="전문자료">전문자료</option>
+          <option value="쇼핑">쇼핑</option>
+          <option value="지역">지역</option>
+          <option value="동영상">동영상</option>
+          <option value="이미지">이미지</option>
+          <option value="내PC">내PC</option>
+          <option value="스마트파인더" disabled="true">스마트파인더</option>
+          <option value="영화">- 영화</option>
+          <option value="자동차">- 자동차</option>
+          <option value="게임">- 게임</option>
+          <option value="건강">- 건강</option>
+          <option value="인물">- 인물</option>
+          <option value="네이버 랩" disabled="true">네이버 랩</option>
+          <option value="긍정부정검색">긍정부정검색</option>
+        </select>
+        <fieldset>
+          <legend>검색어</legend>
+          <label for="search-word"></label>
+          <input type="search" id="search-word" placeholder="검색어를 입력해주세요.">
+          <button type="button">검색</button>
+        </fieldset>
+      </fieldset>
+    </form>
+    <div>
+      <button type="button">한글 입력기</button>
+      <button type="button">자동완성 레이어</button>
+      <button type="button">최근검색어</button>
+      <button type="button">전체삭제</button>
       <ul>
-        <li><a href="#">메일</a></li>
-        <li><a href="#">카페</a></li>
-        <li><a href="#">블로그</a></li>
-        <li><a href="#">지식iN</a></li>
-        <li><a href="#">쇼핑</a></li>
-        <li><a href="#">쇼핑LIVE</a></li>
-        <li><a href="#">Pay</a></li>
-        <li><a href="#">TV</a></li>
-        <li><a href="#">사전</a></li>
-        <li><a href="#">뉴스</a></li>
-        <li><a href="#">증권</a></li>
-        <li><a href="#">부동산</a></li>
-        <li><a href="#">지도</a></li>
-        <li><a href="#">VIBE</a></li>
-        <li><a href="#">책</a></li>
-        <li><a href="#">웹툰</a></li>
+        <li>txt, date <button>삭제</button></li>
       </ul>
-    </nav>
-    <article>
+      <div>
+        <p>
+          검색어 저장 기능이 꺼져 있습니다.
+          설정이 초기화 된다면 <a href="#">도움말</a>을 확인해주세요.
+        </p>
+        <p>
+          최근 검색어 내역이 없습니다.
+          설정이 초기화 된다면 <a href="#">도움말</a>을 확인해주세요.
+        </p>
+        <a href="#">도움말</a> <button type="button">자동저장 끄기</button>
+      </div>
+      <div>
+        <a href="#">자세히보기</a>
+        <a href="#">관심사를 반영한 컨텍스트 자동완성 도움말</a>
+        <button type="button">컨텍스트 자동완성</button>
+        <p>
+          동일한 시간대/연령/남녀별 사용자 그룹의
+          관심사에 맞춰 자동완성을 제공합니다.
+        </p>
+      </div>
+      <a href="#">로그인</a> <a href="#">자세히</a>
+      <button type="button">컨텍스트 자동완성 레이어 닫기</button>
+      <a href="#">도움말</a> <a href="#">신고</a> <button type="button">자동완성 끄기</button>
+    </div>
+  </article>
+  <nav>
+    <h2>자주찾는 서비스</h2>
+    <ul>
+      <li><a href="#">메일</a></li>
+      <li><a href="#">카페</a></li>
+      <li><a href="#">블로그</a></li>
+      <li><a href="#">지식iN</a></li>
+      <li><a href="#">쇼핑</a></li>
+      <li><a href="#">쇼핑LIVE</a></li>
+      <li><a href="#">Pay</a></li>
+      <li><a href="#">TV</a></li>
+      <li><a href="#">사전</a></li>
+      <li><a href="#">뉴스</a></li>
+      <li><a href="#">증권</a></li>
+      <li><a href="#">부동산</a></li>
+      <li><a href="#">지도</a></li>
+      <li><a href="#">VIBE</a></li>
+      <li><a href="#">책</a></li>
+      <li><a href="#">웹툰</a></li>
+    </ul>
+    <a href="#">더보기</a>
+    <ul>
+      <li>서비스 전체보기</li>
+      <li>메뉴설정</li>
+      <li>초기화</li>
+      <li>저장</li>
+    </ul>
+    <aside>
       <h3>날씨정보</h3>
       <ul>
         <li>미세먼지</li>
@@ -60,130 +157,351 @@
         <li>최고온도/최저온도</li>
         <li>현재 위치</li>
       </ul>
-    </article>
-    <article>
+    </aside>
+  </nav>
+  <main>
+    <h2>네이버 서비스</h2>
+    <section>
+      <h3>서비스 카테고리</h3>
+      <dl>
+        <dt>ㄱ-ㅁ</dt>
+        <dd><a href="#">날씨</a></dd>
+        <dd><a href="#">네이버 MY CAR</a></dd>
+        <dd><a href="#">네이버 게임</a></dd>
+        <dd><a href="#"> 네이버 예약</a></dd>
+        <dd><a href="#">네이버 프리미엄콘텐츠</a></dd>
+        <dd><a href="#">네이버플러스 멤버십</a></dd>
+        <dd><a href="#">뉴스</a></dd>
+        <dd><a href="#">데이터랩</a></dd>
+        <dd><a href="#">메모</a></dd>
+      </dl>
+      <dl>
+        <dt>ㅂ-ㅅ</dt>
+        <a>밴드</a>
+        <a>부동산</a>
+        <a>북마크</a>
+        <a>스포츠</a>
+        <a>시리즈</a>
+        <a>시리즈온</a>
+      </dl>
+      <dl>
+        <dt>ㅇ</dt>
+        <a>엑스퍼트</a>
+        <a>영화</a>
+        <a>오디오클립</a>
+        <a href="#">오피스</a>
+        <a href="#">웨일</a>
+        <a href="#">웹소설</a>
+        <a href="#">웹툰</a>
+        <a href="#">인플루언서 검색</a>
+      </dl>
+      <dl>
+        <dt>ㅈ-ㅊ</dt>
+        <a>자동차</a>
+        <a>주소록</a>
+        <a>증권</a>
+        <a>지도</a>
+        <a>지식백과</a>
+        <a>책</a>
+      </dl>
+      <dl>
+        <dt>ㅋ-ㅎ</dt>
+        <a>캘린더</a>
+        <a>클로바더빙</a>
+        <a>파파고</a>
+        <a>포스트</a>
+        <a>학술정보</a>
+        <a>항공권</a>
+        <a>호텔</a>
+      </dl>
+      <dl>
+        <dt>A-Z</dt>
+        <a>
+          Keep
+          modoo!
+        </a>
+        <a>MYBOX</a>
+        <a>MY구독</a>
+        <a>TV연예</a>
+        <a>VLIVE</a>
+        <a>VIBE</a>
+      </dl>
+      <dl>
+        <dt>사전</dt>
+        <a>사전</a>
+        <a>국어사전</a>
+        영<a>어/영영사전</a>
+        <a>일본어사전</a>
+        <a>중국어사전</a>
+        <a>한자사전</a>
+        <a>사전 더보기</a>
+      </dl>
+    </section>
+    <section>
+      <h3>서비스 카테고리 선택</h3>
+      <dl>
+        <dt>ㄱ-ㅁ</dt>
+        <input type="checkbox" id="weather" name="날씨">
+        <label for="weather">날씨</label>
+        네이버 MY CAR
+        네이버 게임
+        네이버 예약
+        네이버 프리미엄콘텐츠
+        네이버플러스 멤버십
+        뉴스
+        데이터랩
+        메모
+      </dl>
+      <dl>
+        <dt>ㅂ-ㅅ</dt>
+        밴드
+        부동산
+        북마크
+        스포츠
+        시리즈
+        시리즈온
+      </dl>
+      <dl>
+        <dt>ㅇ</dt>
+        엑스퍼트
+        영화
+        오디오클립
+        오피스
+        웨일
+        웹소설
+        웹툰
+        인플루언서 검색
+      </dl>
+      <dl>
+        <dt>ㅈ-ㅊ</dt>
+        자동차
+        주소록
+        증권
+        지도
+        지식백과
+        책
+      </dl>
+      <dl>
+        <dt>ㅋ-ㅎ</dt>
+        캘린더
+        클로바더빙
+        파파고
+        포스트
+        학술정보
+        항공권
+        호텔
+      </dl>
+      <dl>
+        <dt>A-Z</dt>
+        Keep
+        modoo!
+        MYBOX
+        MY구독
+        TV연예
+        V LIVE
+        VIBE
+      </dl>
+      <dl>
+        <dt>사전</dt>
+        사전
+        국어사전
+        영어/영영사전
+        일본어사전
+        중국어사전
+        한자사전
+        사전 더보기
+      </dl>
+    </section>
+    <section>
       <h3>광고</h3>
-      <img src="#" alt="광고이미지 슬라이드">
-    </article>
-    <article>
-      <h3>뉴스 스탠드</h3>
-      <nav>
+      <img src="#" alt="유니세프 이미지">
+    </section>
+    <section>
+      <h3>뉴스스탠드</h3>
+      <header>
+        <h4>현재 이슈 기사</h4>
         <ul>
-          <li><button type="button">구독한 언론사</button></li>
-          <li><button type="button">전체 언론사</button></li>
+          <li>article</li>
+          <li>article</li>
         </ul>
+      </header>
+      <div>
+        <a href="#">연합뉴스</a>
+        <ul>
+          <li>뉴스홈</li>
+          <li>연예</li>
+          <li>스포츠</li>
+          <li>경제</li>
+        </ul>
+        <a href="#">뉴스스탠드</a>
+        <ul>
+          <li>구독한 언론사</li>
+          <li>전체언론사</li>
+        </ul>
+
         <ul>
           <li><button type="button">리스트형</button></li>
           <li><button type="button">썸네일형</button></li>
         </ul>
-      </nav>
-      <div>
+        <a href="#">설정</a>
 
-      </div>
-    </article>
-    <article>
-      <h3>오늘 읽을만한 글</h3>
-      <p>주제별로 분류된 다양한 글 모음</p>
-      <button>관심주제 설정</button>
-      <nav>
-        <ul>
-          <li><a href="#">엔터</a></li>
-          <li><a href="#">스포츠</a></li>
-          <li><a href="#">자동차</a></li>
-          <li><a href="#">웹툰</a></li>
-          <li><a href="#">경제M</a></li>
-          <li><a href="#">MY구독</a></li>
-          <li><a href="#">레시피</a></li>
-
-          <li><a href="#">게임</a></li>
-          <li><a href="#">과학</a></li>
-          <li><a href="#">리빙</a></li>
-          <li><a href="#">건강</a></li>
-          <li><a href="#">책방</a></li>
-          <li><a href="#">부모i</a></li>
-          <li><a href="#">패션</a></li>
-          <li><a href="#">뷰티</a></li>
-          <li><a href="#">함께N</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="#">
-            <ul>
-              <li><img src="#" alt="기사이미지"></li>
-              <li>
-                <ul>
-                  <li>주제</li>
-                  <li>제목</li>
-                  <li>내용</li>
-                  <li>작성자/작성일자</li>
-                </ul>
-              </li>
-            </ul>
-          </a>
-        </li>
-      </ul>
-    </article>
-    <article>
-      <h3>오늘 가장 따뜻한 클릭</h3>
-      <ul>
-        <li>
+        <nav>
           <ul>
-            <li><img src="#" alt="이미지"></li>
-            <li>상품명</li>
+            <li>종합/경제</li>
+            <li>방송/통신</li>
+            <li>IT</li>
+            <li>영자지</li>
+            <li>스포츠/연예</li>
+            <li>매거진/전문지</li>
+            <li>지역</li>
+          </ul>
+        </nav>
+        <button type="button">닫기</button>
+
+        <article>
+          <h5>이전, 다음 버튼</h5>
+          <button type="button">이전</button>
+          <button type="button">다음</button>
+        </article>
+      </div>
+      <article>
+        <h4>뉴스 구독 및 해지 설명</h4>
+        <p>해당 언론사의 사정으로 접근이 제한됩니다.</p>
+        <p>해당 언론사의 사정으로 접근이 일시 제한됩니다.</p>
+        <p>구독한 언론사에 추가되었습니다.</p>
+        <p>구독한 언론사가 없습니다.</p>
+        <p><span></span>을(를) 구독해지 하시겠습니까?</p>
+        <button type="button">확인</button>
+        <button type="button">닫기</button>
+        <button type="button">확인</button>
+        <button type="button">취소</button>
+
+        <p>
+          언론사 구독 설정에서 관심있는 언론사를 구독하시면<br>
+          언론사가 직접 편집한 뉴스들을 네이버 홈에서 바로 보실 수 있습니다.
+        </p>
+
+        <button type="button">언론사 구독 설정하기</button>
+      </article>
+
+      <article>
+        <h4>뉴스별 구독 해지</h4>
+        <ul>
+          <li><img src="#" alt="00뉴스"></li>
+          <li><button type="button">구독</button></li>
+          <li><button type="button">해지</button></li>
+          <li><a href="#">기사보기</a></li>
+        </ul>
+      </article>
+    </section>
+
+    <section>
+      <h3>주제별 캐스트</h3>
+      <header>
+        <p>오늘 읽을만한 글주제별로 분류된 다양한 글 모음
+          <span>973</span> 개의 글 <button type="button">관심주제 설정</button>
+        </p>
+        <button type="button">이전</button>
+        <button type="button">다음</button>
+        <nav>
+          <ul>
+            <li><a href="#">엔터</a></li>
+            <li><a href="#">스포츠</a></li>
+            <li><a href="#">자동차</a></li>
+            <li><a href="#">웹툰</a></li>
+            <li><a href="#">경제M</a></li>
+            <li><a href="#">MY구독</a></li>
+            <li><a href="#">레시피</a></li>
+
+            <li><a href="#">게임</a></li>
+            <li><a href="#">과학</a></li>
+            <li><a href="#">리빙</a></li>
+            <li><a href="#">건강</a></li>
+            <li><a href="#">책방</a></li>
+            <li><a href="#">부모i</a></li>
+            <li><a href="#">패션</a></li>
+            <li><a href="#">뷰티</a></li>
+            <li><a href="#">함께N</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <section>
+        <h4>네이버 스포츠</h4>
+        <header>
+          <ul>
+            <li><a href="#">KPGA 네이버 스포츠</a></li>
+            <li><a href="#">스포츠 홈</a></li>
+          </ul>
+          <nav>
+            <ul>
+              <li><a href="#">야구</a></li>
+              <li><a href="#">해외야구</a></li>
+              <li><a href="#">축구</a></li>
+              <li><a href="#">해외축구</a></li>
+              <li><a href="#">농구</a></li>
+              <li><a href="#">배구</a></li>
+              <li><a href="#">골프</a></li>
+              <li><a href="#">일반</a></li>
+              <li><a href="#">e스포츠</a></li>
+            </ul>
+          </nav>
+        </header>
+
+        <article>
+          <h5>기사 하이라이트</h5>
+          <div>
+            <h6><a href="#">기사제목</a></h6>
+            <video src="#"></video>
+            <p>00뉴스</p>
+          </div>
+        </article>
+      </section>
+
+      <button type="button">새로운 글 더보기</button>
+    </section>
+    <aside>
+      <section>
+        <h4>로그인</h4>
+        <p>네이버를 더 안전하고 편리하게 이용하세요</p>
+
+        <a href="#">네이버로그인</a>
+        <a href="#">아이디</a> <a href="#">비밀번호찾기</a>
+        <a href="#">회원가입</a>
+      </section>
+      <section>
+        <h4>타임스퀘어</h4>
+        <button type="button">이전</button>
+        <button type="button">다음</button>
+        <a href="#">이슈코로나바이러스감염증-19 현황</a>
+        <iframe src="#"></iframe>
+      </section>
+      <article>
+        <h4>이동바, 테마</h4>
+        <button type="button">Top</button>
+        <button type="button">라이트 모드로 보기</button>
+      </article>
+      <section>
+        <h4>네이버재단 사이트 목록</h4>
+        <article>
+          <h5>네이버재단 각 사이트</h5>
+          <ul>
+            <li><img src="thumbnail" alt="재단사이트 썸네일"></li>
             <li>
               <ul>
-                <li>회사명</li>
-                <li>펀딩률</li>
+                <li>네이버 커넥트 재단</li>
+                <li>온라인 스터디 모집(무료)</li>
+                <li>혼자 배우기 힘든 인공지능 코칭받으며 공부 시작</li>
               </ul>
             </li>
           </ul>
-        </li>
-      </ul>
-      <button type="button">새로운 글 더보기</button>
-    </article>
-    <aside>
-      <article>
-        <h4>로그인</h4>
-        <p>네이버를 더 안전하고 편리하게 이용하세요</p>
-        <a href="#">Naver 로그인</a>
-        <ul>
-          <li>아이디</li>
-          <li>비밀번호 찾기</li>
-        </ul>
-        <p><a href="naver_agree.html">회원가입</a></p>
-      </article>
-      <article>
-        <h4>쇼핑뉴스</h4>
-        <iframe src="#"></iframe>
-      </article>
+        </article>
+      </section>
     </aside>
-    <article>
-      <h3>다크모드 및 최상단 이동</h3>
-      <ul>
-        <li>다크 모드로 보기</li>
-        <li>top</li>
-      </ul>
-    </article>
   </main>
   <footer>
-    <div>
-      <ul>
-        <li><a href="#">공지사항</a></li>
-        <li><a href="#">서비스 전체보기</a></li>
-      </ul>
-    </div>
-    <div>
-      <p>네이버 프로젝트</p>
-      <ul>
-        <li><img src="#" alt="웨일 브라우저">웨일브라우저</li>
-        <li><a href="#">다운받기</a></li>
-      </ul>
-      <ul>
-        <li><img src="#" alt="프로젝트 꽃">프로젝트 꽃</li>
-        <li><a href="#">바로가기</a></li>
-      </ul>
-    </div>
+    <a href="#">공지사항</a>
+    <a href="#">서비스 전체보기</a>
     <div>
       <p>Creators</p>
       <ul>
@@ -206,6 +524,16 @@
         <li><a href="#">네이버 D2</a></li>
         <li><a href="#">네이버 D2SF</a></li>
         <li><a href="#">네이버 랩스</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><img src="#" alt="웨일 브라우저">웨일브라우저</li>
+        <li><a href="#">다운받기</a></li>
+      </ul>
+      <ul>
+        <li><img src="#" alt="프로젝트 꽃">프로젝트 꽃</li>
+        <li><a href="#">바로가기</a></li>
       </ul>
     </div>
     <div>
