🎨 Add reacting lines

--- a/naver/naver_agree.html
+++ b/naver/naver_agree.html
@@ -10,10 +10,12 @@
 
 <body>
   <header>
+    <a href="#">본문으로 바로가기</a>
     <label for="language"></label>
     <select name="언어 선택" id="language">
-      <option value="English">English</option>
+      <option value="English" checked>English</option>
       <option value="Korean">Korean</option>
+      <option value="Chinese">Chinese</option>
     </select>
   </header>
   <h1>NAVER</h1>
@@ -35,28 +37,55 @@
           <label for="terms"></label>
           <input type="checkbox" id="terms" name="terms1">
           <strong>Welcome to Naver!</strong>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Thank you for using our services and products (“Naver Service(s)” or “Service(s)”). These NAVER Terms of
+            Service define the relationship between Naver Corporation (“Naver”), which provides Naver Services, and
+            members of Naver (“Member(s)”) or non-members, who use such Services, with regard to the use of various
+            Naver Services, and contain useful information which may help you use Naver Services.</p>
+          <p>
+            By using our Services, you are deemed to have been notified of NAVER Terms of Service, and by signing up as
+            a Member, you are deemed to agree to be bound by these NAVER Terms of Service and additional relevant
+            operation policies. Please take a moment to read these NAVER Terms of Service carefully.
+          </p>
+          <strong>
+            Enjoy various Naver Services.
+          </strong>
+          <p>
+            Naver provides a variety of Services that can make your life more convenient such as information searching,
+            communication with other users, provision of contents and shopping, through Naver domain websites including
+            www.naver.com and applications (apps). You can freely use various Naver Services through different kinds of
+            devices used to access the Internet such as PCs and mobile phones, and you may easily check the details of
+            individual Services provided under Information and Notice sections for each Service, and Help section on <a
+              href="#">Naver Web Customer Center (“Customer Center”)</a>.
+          </p>
         </fieldset>
         <fieldset>
           <legend>Privacy Policy<span>(required)</span></legend>
           <label for="privacy"></label>
           <input type="checkbox" id="privacy" name="terms2">
           <strong>1. Collected Personal Information</strong>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Users may now access the majority of NAVER services available to members, such as information searches or
+            viewing news articles, without the need to sign up for membership. Where a user signs up with NAVER to
+            access personalized or membership services, including email, calendar, café, or blog services, only a
+            minimal amount of personal information required for service use is collected.</p>
         </fieldset>
         <fieldset>
           <legend>User Location<span>(Option)</span></legend>
           <label for="location"></label>
           <input type="checkbox" id="location" name="terms2">
-          <strong>Welcome to Naver!</strong>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>With the agreement of the terms of use for location information, you may use NAVER's location-based
+            services including <strong>Reception of advertisement by using location information.</strong></p>
         </fieldset>
         <fieldset>
           <legend>Receive promotional information<span>(Option)</span></legend>
           <label for="promotional"></label>
           <input type="checkbox" id="promotional" name="terms3">
-          <strong>Welcome to Naver!</strong>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>You can receive various information such as events and benefits provided by NAVER via mobile phone (NAVER
+            app notifications or text messages). Some services (those run under a separate membership system or used
+            through additional subscriptions after joining NAVER) may require separate consent, in which case an
+            additional notice will be provided and consent obtained.</p>
+          <p>
+            In order to use our services, you must agree to Naver's Terms of Service & Privacy Policy.
+          </p>
         </fieldset>
       </form>
     </article>
@@ -71,7 +100,8 @@
   </main>
   <footer>
     <p>Need an account for your group? <a href="#">Sign up group account</a></p>
-    <small><a href="#">© NAVER Corp.</a></small>
+    <small><a href="#">naver</a><span><i>Copyright</i></span> ©<a href="#">NAVER Corp.</a><span><i>All Rights
+          Reserved.</i></span></small>
   </footer>
 </body>
 
