--- a/naver/naver_home.html
+++ b/naver/naver_home.html
@@ -549,7 +549,7 @@
         <li><a href="#">고객센터</a></li>
       </ul>
     </div>
-    <small><a href="#">ⓒ NAVER Corp.</a></small>
+    <small>ⓒ<a href="#">NAVER Corp.</a></small>
   </footer>
 </body>
 
