--- a/naver/naver_agree.html
+++ b/naver/naver_agree.html
@@ -18,7 +18,7 @@
       <option value="Chinese">Chinese</option>
     </select>
   </header>
-  <h1>NAVER</h1>
+  <h1><a href="#">NAVER</a></h1>
   <img src="#" alt="NAVER logo">
   <main>
     <article>
