💄 Update progress CSS

--- a/wadiz/wadiz.html
+++ b/wadiz/wadiz.html
@@ -174,7 +174,7 @@
       </li>
       <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
       <li>
-        <progress value="1378" max="100"></progress>
+        <progress value="100" max="100" class="bar-100"></progress>
       </li>
       <li>
         <ul class="cont-fund">
@@ -192,7 +192,7 @@
       </li>
       <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
       <li>
-        <progress value="1378" max="100"></progress>
+        <progress value="70" max="100" class="bar-70"></progress>
       </li>
       <li>
         <ul class="cont-fund">
@@ -210,26 +210,7 @@
       </li>
       <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
       <li>
-        <progress value="1378" max="100"></progress>
-      </li>
-      <li>
-        <ul class="cont-fund">
-          <li class="cont-success">1378% <span>13,788,800원</span></li>
-          <li class="cont-left">7일 남음</li>
-        </ul>
-      </li>
-    </ul>
-
-    <ul class="wrap-card">
-      <li class="tit-card">
-        <a href="#">
-          <img src="#" alt="막걸리" class="img-card">
-          <p class="cont-card">[막걸리로 펀딩 3144%] 네이버 평점 5.0의 달콤함을 맛보세요!</p>
-        </a>
-      </li>
-      <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
-      <li>
-        <progress value="1378" max="100"></progress>
+        <progress value="50" max="100" class="bar-50"></progress>
       </li>
       <li>
         <ul class="cont-fund">
@@ -248,7 +229,26 @@
       </li>
       <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
       <li>
-        <progress value="1378" max="100"></progress>
+        <progress value="80" max="100" class="bar-80"></progress>
+      </li>
+      <li>
+        <ul class="cont-fund">
+          <li class="cont-success">1378% <span>13,788,800원</span></li>
+          <li class="cont-left">7일 남음</li>
+        </ul>
+      </li>
+    </ul>
+
+    <ul class="wrap-card">
+      <li class="tit-card">
+        <a href="#">
+          <img src="#" alt="막걸리" class="img-card">
+          <p class="cont-card">[막걸리로 펀딩 3144%] 네이버 평점 5.0의 달콤함을 맛보세요!</p>
+        </a>
+      </li>
+      <li class="category-card">푸드 <span>농업회사법인 독 브루어리 주식회사</span></li>
+      <li>
+        <progress value="100" max="100" class="bar-100"></progress>
       </li>
       <li>
         <ul class="cont-fund">
