--- a/modal/modal.html
+++ b/modal/modal.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="dimm"></div>
+  <div class="cloud"></div>
   <div class="modalWrap">
     <article class="contents">
       MODAL
@@ -16,7 +17,7 @@
     <!-- 4. animation : ball이 modalWrap을 반복해서 도는 애니메이션 만들기 -->
     <!-- 5. animation : 구름 애니메이션, dimm과 modalWrap 사이로 지나가기 반복해서, 서로 속도가 다르게 -->
     <div class="ball"></div>
-    <img src="../a.jpg" alt="space">
+    <!-- <img src="../a.jpg" alt="space"> -->
 
     <!-- 6. transition : modalWrap에 마우스를 올렸을때, box-shadow나오게 만들기 -->
     <!-- 7. transition : modalWrap에 마우스를 올렸을때, 캐릭터가 아래에서 위로 나오기 -->
@@ -30,23 +31,20 @@
     <!-- flex: 1 1 100px; -->
     <!-- 3. modal position, slider -->
     <div class="indicator">
-      <input type="radio" name="pos" id="pos1" checked>
-      <input type="radio" name="pos" id="pos2">
-      <input type="radio" name="pos" id="pos3">
-      <input type="radio" name="pos" id="pos4">
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <p class="bullet">
-        <label for="pos1"></label>
-        <label for="pos2"></label>
-        <label for="pos3"></label>
-        <label for="pos4"></label>
-      </p>
+      <input type="radio" name="pos" id="slide1" checked>
+      <input type="radio" name="pos" id="slide2">
+      <input type="radio" name="pos" id="slide3">
     </div>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <p class="bullet">
+      <label for="slide1"></label>
+      <label for="slide2"></label>
+      <label for="slide3"></label>
+    </p>
 
     <button type="button" class="btnClose">
       X
