--- a/modal/modal.html
+++ b/modal/modal.html
@@ -9,27 +9,20 @@
 </head>
 <body>
   <div class="dimm"></div>
-  <div class="cloud"></div>
+  <div class="clouds">
+    <div class="cloud1"></div>
+    <div class="cloud2"></div>
+  </div>
   <div class="modalWrap">
     <article class="contents">
       MODAL
     </article>
-    <!-- 4. animation : ball이 modalWrap을 반복해서 도는 애니메이션 만들기 -->
-    <!-- 5. animation : 구름 애니메이션, dimm과 modalWrap 사이로 지나가기 반복해서, 서로 속도가 다르게 -->
     <div class="ball"></div>
-    <!-- <img src="../a.jpg" alt="space"> -->
-
-    <!-- 6. transition : modalWrap에 마우스를 올렸을때, box-shadow나오게 만들기 -->
-    <!-- 7. transition : modalWrap에 마우스를 올렸을때, 캐릭터가 아래에서 위로 나오기 -->
-
     <a href="javascript:void(0);" class="btn prev">PREV</a>
     <a href="javascript:void(0);" class="btn next">NEXT</a>
-    <!-- 1. font 축약형:  -->
-    <!-- font: italic 1.2em "Fira Sans", serif; -->
     <!-- 2. flex : grow, shrink, basis-->
     <!-- flex: 0 1 auto; 기본값-->
     <!-- flex: 1 1 100px; -->
-    <!-- 3. modal position, slider -->
     <div class="indicator">
       <input type="radio" name="pos" id="slide1" checked>
       <input type="radio" name="pos" id="slide2">
