:fix: fix ratio

--- a/modal/modal.html
+++ b/modal/modal.html
@@ -23,11 +23,11 @@
     <!-- 2. flex : grow, shrink, basis-->
     <!-- flex: 0 1 auto; 기본값-->
     <!-- flex: 1 1 100px; -->
-    <div class="indicator">
+    <!-- <div class="indicator">
       <input type="radio" name="pos" id="slide1" checked>
       <input type="radio" name="pos" id="slide2">
       <input type="radio" name="pos" id="slide3">
-    </div>
+    </div> -->
     <ul>
       <li></li>
       <li></li>
