--- a/modal/modal.html
+++ b/modal/modal.html
@@ -10,8 +10,8 @@
 <body>
   <div class="dimm"></div>
   <div class="clouds">
-    <div class="cloud1"></div>
-    <div class="cloud2"></div>
+    <div class="cloud cloud1"></div>
+    <div class=" cloud cloud2"></div>
   </div>
   <div class="modalWrap">
     <article class="contents">
@@ -23,26 +23,14 @@
     <!-- 2. flex : grow, shrink, basis-->
     <!-- flex: 0 1 auto; 기본값-->
     <!-- flex: 1 1 100px; -->
-    <!-- <div class="indicator">
+    <div class="indicator">
       <input type="radio" name="pos" id="slide1" checked>
       <input type="radio" name="pos" id="slide2">
       <input type="radio" name="pos" id="slide3">
-    </div> -->
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <p class="bullet">
-      <label for="slide1"></label>
-      <label for="slide2"></label>
-      <label for="slide3"></label>
-    </p>
-
+    </div>
     <button type="button" class="btnClose">
       X
     </button>
   </div>
-
 </body>
 </html>
