--- a/modal/modal.html
+++ b/modal/modal.html
@@ -20,15 +20,12 @@
     <div class="ball"></div>
     <a href="javascript:void(0);" class="btn prev">PREV</a>
     <a href="javascript:void(0);" class="btn next">NEXT</a>
-    <!-- 2. flex : grow, shrink, basis-->
-    <!-- flex: 0 1 auto; 기본값-->
-    <!-- flex: 1 1 100px; -->
     <div class="indicator">
       <input type="radio" name="pos" id="slide1" checked>
       <input type="radio" name="pos" id="slide2">
       <input type="radio" name="pos" id="slide3">
     </div>
-    <button type="button" class="btnClose">
+    <button type="button" class="btn btnClose">
       X
     </button>
   </div>
