--- a/einsmedia/index.html
+++ b/einsmedia/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.einsmedia.co.kr/src/img/ico/favicon-16x16.png">
 </head>
 <body>
-  <div class="main-bg">
+  <div class="main">
+    <img src="./images/bg7.jpg" id="bg"></img>
     <header>
       <h1 class="a11y-hide">einsmedia</h1>
       <img src="./images/logo2.png" alt="로고 이미지">
@@ -42,8 +43,7 @@
   </div>
   <section id="home">
     <h2 class="a11y-hide">Home section</h2>
-    <article>      
-        <h3>A부터 Z까지 꼼꼼하게
+        <h3>A부터 Z까지 꼼꼼하게 
           따져볼수록 아인스미디어.</h3>
         <p>광고관리의 노하우와 경험을 통해 최적화 된 광고 전략과
           솔루션을 제공합니다</p>
@@ -80,7 +80,7 @@
           </li>
         </ul>
       </article>
-      <article>
+      <article id="sec2">
         <h3>고객에게 가장 적합한
           마케팅 채널 제안.</h3>
           <p>고도의 운영노하우와 축적된 데이터를 통해
