--- a/einsmedia/index.html
+++ b/einsmedia/index.html
@@ -9,116 +9,115 @@
     <link rel="icon" type="image/png" sizes="16x16" href="http://www.einsmedia.co.kr/src/img/ico/favicon-16x16.png">
 </head>
 <body>
-  <div class="main">
-    <img src="./images/bg7.jpg" id="bg"></img>
+  <section class="main" id="top">
+    <div class="bg-main"></div>
     <header>
       <h1 class="a11y-hide">einsmedia</h1>
       <img src="./images/logo2.png" alt="로고 이미지">
       <nav>
         <ul>
-          <li>Business</li>
-          <li>Why EINS</li>
-          <li>Solution</li>
-          <li>Portfolio</li>
-          <li>Company</li>
-          <li>People</li>
-          <li>Menu</li>
+          <li><button type="button">Business</button></li>
+          <li><button type="button">Why EINS</button></li>
+          <li><button type="button">Solution</button></li>
+          <li><button type="button">Portfolio</button></li>
+          <li><button type="button">Company</button></li>
+          <li><button type="button">People</button></li>
+          <li><button type="button">Menu</button></li>
         </ul>
       </nav>
     </header>
-    <article>
+    <article class="wrap-main" id="page_one">
       <ul class="wrap-btn">
         <li><button type="button">Next</button></li>
         <li><button type="button">Prev</button></li>
       </ul>
-      <h3>More than advertising<br>
-        expert ‘einsmedia’</h3>
-      <p>사용자와 클라이언트를 연결해 주는 No1 디지털 마케팅 그룹</p>
-      <ul class="wrap-icon">
-        <li><button type="button"><img src="./images/ic_tw.png" alt="트위터 로고"></button></li>
-        <li><button type="button"><img src="./images/ic_fb.png" alt="페이스북 로고"></button></li>
-        <li><button type="button"><img src="./images/ic_n.png" alt="네이버 로고"></button></li>
-      </ul>
+      <div class="wrap-para">
+        <h3>More than advertising<br>
+          expert ‘einsmedia’</h3>
+        <p>사용자와 클라이언트를 연결해 주는 <b>No1 디지털 마케팅 그룹</b></p>
+      </div>
     </article>
-  </div>
+    <ul class="wrap-icon">
+      <li><button type="button"><img src="./images/ic_tw.png" alt="트위터 로고"></button></li>
+      <li><button type="button"><img src="./images/ic_fb.png" alt="페이스북 로고"></button></li>
+      <li><button type="button"><img src="./images/ic_n.png" alt="네이버 로고"></button></li>
+    </ul>
+  </section>
   <section id="home">
+    <article id="page_one">
     <h2 class="a11y-hide">Home section</h2>
-        <h3>A부터 Z까지 꼼꼼하게 
-          따져볼수록 아인스미디어.</h3>
-        <p>광고관리의 노하우와 경험을 통해 최적화 된 광고 전략과
-          솔루션을 제공합니다</p>
-        <ul>
+        <h3 class="tit-sub">A부터 Z까지 꼼꼼하게<br>
+          따져볼수록 아인스미디어</h3>
+        <p class="txt-sub">
+          광고관리의 노하우와 경험을 통해 최적화 된 광고 전략과<br>
+          솔루션을 제공합니다
+        </p>
+        <ul class="wrap-grid">
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
           <li>
             <a href="#"><strong>체계적인 광고관리</strong><p>상황분석 및 전략수립을 토대로 최적의
               광고 효과를 제공합니다</p></a>
-            <p></p>
           </li>
         </ul>
       </article>
-      <article id="sec2">
-        <h3>고객에게 가장 적합한
-          마케팅 채널 제안.</h3>
-          <p>고도의 운영노하우와 축적된 데이터를 통해
+      <article class="home_two" id="page_two">
+        <h3 class="tit-sub">고객에게 가장 적합한<br>
+          마케팅 채널 제안</h3>
+          <p class="txt-sub">고도의 운영노하우와 축적된 데이터를 통해<br>
             최적의 마케팅 채널을 제안합니다
           </p>
-          <ul>
+          <ul class="wrap-list">
             <li>
               <a href="#">
                 <strong>검색광고</strong>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nisi amet exercitationem voluptatem. At dolore assumenda optio obcaecati culpa quisquam in voluptatum perspiciatis possimus beatae aperiam officia, explicabo voluptate voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam corrupti blanditiis ducimus non sint explicabo eos, sit tempore architecto aliquid provident, ab modi pariatur.</p>
               </a>
             </li>
             <li>
               <a href="#">
                 <strong>검색광고</strong>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nisi amet exercitationem voluptatem. At dolore assumenda optio obcaecati culpa quisquam in voluptatum perspiciatis possimus beatae aperiam officia, explicabo voluptate voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam corrupti blanditiis ducimus non sint explicabo eos, sit tempore architecto aliquid provident, ab modi pariatur.</p>
               </a>
             </li>
             <li>
               <a href="#">
                 <strong>검색광고</strong>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nisi amet exercitationem voluptatem. At dolore assumenda optio obcaecati culpa quisquam in voluptatum perspiciatis possimus beatae aperiam officia, explicabo voluptate voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam corrupti blanditiis ducimus non sint explicabo eos, sit tempore architecto aliquid provident, ab modi pariatur.</p>
               </a>
             </li>
             <li>
               <a href="#">
                 <strong>검색광고</strong>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nisi amet exercitationem voluptatem. At dolore assumenda optio obcaecati culpa quisquam in voluptatum perspiciatis possimus beatae aperiam officia, explicabo voluptate voluptatibus!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero numquam corrupti blanditiis ducimus non sint explicabo eos, sit tempore architecto aliquid provident, ab modi pariatur.</p>
               </a>
             </li>
           </ul>
       </article>
-      <article>
-        <h3>다양한 솔루션을 통한
-          정확하고 빠른 분석.</h3>
-        <p>고도의 운영 Know-how와 축적된 데이터 기반의 솔루션을 통해
+      <article class="home_three" id="page_three">
+        <h3 class="tit-sub">다양한 솔루션을 통한<br>
+          정확하고 빠른 분석</h3>
+        <p class="txt-sub">고도의 운영 Know-how와 축적된 데이터 기반의 솔루션을 통해<br>
           정확하게 분석하고, 빠르게 제안하고, 효율적으로 운영합니다</p>
-        <ul>
+        <ul class="wrap-grid">
           <li>
             <a href="#">
               <strong>로그분석 솔루션</strong>
@@ -145,49 +144,77 @@
           </li>
         </ul>
       </article>
-      <article>
-        <h3>아인스미디어는 사용자와 클라이언트를 연결해 주는
-          No.1 디지털 마케팅 그룹입니다.</h3>
-        <ul>
+      <article class="home_four" id="page_four">
+        <h3 class="tit-sub">아인스미디어는 사용자와 클라이언트를 연결해 주는<br>
+          No.1 디지털 마케팅 그룹입니다</h3>
+        <ul class="wrap-grid">
           <li>
-            <strong>열정있는 전문가와 함께합니다.</strong>
+            <strong>열정있는 전문가와<br> 함께합니다.</strong>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, voluptatum.</p>
           </li>
           <li>
-            <strong>열정있는 전문가와 함께합니다.</strong>
+            <strong>열정있는 전문가와<br> 함께합니다.</strong>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, voluptatum.</p>
           </li>
           <li>
-            <strong>열정있는 전문가와 함께합니다.</strong>
+            <strong>열정있는 전문가와<br> 함께합니다.</strong>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, voluptatum.</p>
           </li>
         </ul>
       </article>
-      <article>
-        <h3>고객의 신뢰를 기반으로 200배에 이르는 폭발적인
-          매출 성장률을 기록하고 있습니다.</h3>
+      <article class="home_five" id="page_five">
+        <h3 class="tit-sub">고객의 신뢰를 기반으로 200배에 이르는 폭발적인<br>
+          매출 성장률을 기록하고 있습니다</h3>
         <img src="./images/main.png" alt="매출 성장 그래프">
       </article>
-      <article>
-        <h3>고객과 함께 성장하며 최고의 인재로 성장할
-          마케팅 프로페셔널 아인스피플을 찾습니다.</h3>
-        <ul>
+      <article class="home_six" id="page_six">
+        <h3 class="tit-sub">고객과 함께 성장하며 최고의 인재로 성장할<br>
+          마케팅 프로페셔널 아인스피플을 찾습니다</h3>
+        <ul class="wrap-grid">
           <li>
             <a href="#">
             <strong>아인스피플</strong>
             <p>Lorem ipsum dolor sit amet.</p>
           </a>
-        </li>
+          </li>
+          <li>
+            <a href="#">
+            <strong>아인스피플</strong>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </a>
+          </li>
+          <li>
+            <a href="#">
+            <strong>아인스피플</strong>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </a>
+          </li>
+          <li>
+            <a href="#">
+            <strong>아인스피플</strong>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </a>
+          </li>
         </ul>
-        <div>
+        <div class="box-ask">
           <ul>
-            <li>광고 및 컨설팅 문의<strong>020202</strong></li>
-            <li><input><input><input></li>
-            <li><button></button></li>
+            <li><strong>광고 및 컨설팅 문의</strong><strong>020202</strong></li>
+            <li>
+              <form>
+                <fieldset>
+                  <label for="name"></label>
+                  <input type="text" id="name" placeholder="이름">
+                  <label for="contact"></label>
+                  <input type="text" id="contact" placeholder="연락처">
+                  <label for="agree"></label>
+                  <span><input type="checkbox" id="agree">개인정보수집 및 이용에 동의합니다. <a href="#">(내용보기)</a></span>
+                </fieldset>
+                <button>무료상담신청</button>
+              </form>
+            </li>
           </ul>
         </div>
-        <div>
-          API지도
+        <div class="map">
           <img src="./images/ic_map.png" alt="지도">
         </div>
       </article>
@@ -195,33 +222,35 @@
     <article id="navigator">
       <h3 class="a11y-hide">네비게이션 바</h3>
       <nav>
-        <a href="#">.</a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="#page_one" class="active"></a>
+        <a href="#page_two"></a>
+        <a href="#page_three"></a>
+        <a href="#page_four"></a>
+        <a href="#page_five"></a>
+        <a href="#page_six"></a>
       </nav>
       <ul>
         <li><button type="button"><img src="./images/ad.png" alt="AD아이콘"></button></li>
-        <li><a href="#home">TOP</a></li>
+        <li><a href="#top">TOP</a></li>
       </ul>
     </article>
     <footer>
-      <ul>
-        <li><a href="#">광고문의</a></li>
-        <li><a href="#">상품안내</a></li>
-        <li><a href="#">회사소개서 다운로드</a></li>
-        <li><a href="#">개인정보취급방침</a></li>
-      </ul>
-      <ul>
-        <li>대표이사</li>
-        <li>개인정보보호책임자</li>
-        <li>사업자등록번호</li>
-        <li>대표전화</li>
-        <li>팩스</li>
-      </ul>
-      <address>서울시</address>
+      <div>
+        <ul>
+          <li><a href="#">광고문의</a></li>
+          <li><a href="#">상품안내</a></li>
+          <li><a href="#">회사소개서 다운로드</a></li>
+          <li><a href="#">개인정보취급방침</a></li>
+        </ul>
+        <ul>
+          <li>대표이사</li>
+          <li>개인정보보호책임자</li>
+          <li>사업자등록번호</li>
+          <li>대표전화</li>
+          <li>팩스</li>
+        </ul>
+        <address>서울시</address>
+      </div>
       <img src="./images/logo.png" alt="하단 로고">
     </footer>
 </body>
